crates/compiler/mir/tests/snapshots/mdtest_snapshots__mdtest_mir_snapshots@02-loops@loops_in_cairo_m___continue_in_loops.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Loops in Cairo-M - Continue in Loops"
input_file: mdtest/02-control-flow/02-loops.md
---
Test: Loops in Cairo-M - Continue in Loops
File: /Users/msaug/kkrt-labs/cairo-m/mdtest/02-control-flow/02-loops.md
============================================================
Source:
fn continue_in_loop() -> felt {
    let sum = 0;
    for (let i = 0; i != 10; i = i + 1) {
        if i == 5 {
            continue;
        }
        sum = sum + i;
    }
    return sum;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn continue_in_loop {
    entry: 0

    0:
      %0 = 0
      %1 = 0
      jump 1

    1:
      if %1 Neq 10 then jump 2 else jump 4

    2:
      if %1 Eq 5 then jump 5 else jump 6

    3:
      %1 = %1 Add 1
      jump 1

    4:
      return %0

    5:
      jump 3

    6:
      %0 = %0 Add %1
      jump 3

  }

}
