crates/compiler/mir/tests/snapshots/mdtest_snapshots__mdtest_mir_snapshots@02-loops@loops_in_cairo_m___loop_with_break.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Loops in Cairo-M - Loop with Break"
input_file: mdtest/02-control-flow/02-loops.md
---
Test: Loops in Cairo-M - Loop with Break
File: /Users/msaug/kkrt-labs/cairo-m/mdtest/02-control-flow/02-loops.md
============================================================
Source:
fn loop_with_break() -> felt {
    let i = 10;
    loop {
        if i == 7 || i == 0 {
            break;
        }
        i = i - 1;
    }
    return i;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn loop_with_break {
    entry: 0

    0:
      %0 = 10
      jump 1

    1:
      %1 = %0 Eq 7
      %2 = %0 Eq 0
      %3 = %1 Or %2
      if %3 then jump 3 else jump 4

    2:
      return %0

    3:
      jump 2

    4:
      %0 = %0 Sub 1
      jump 1

  }

}
